Add some logic to subscribe command and refactor classes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,6 +41,7 @@ bot.error.image.format=\
 Wrong command format, please use:\n\
 `/image <chat id> <image url>`.
 bot.error.chatid=Wrong chat `id` number.
+bot.error.database=Error accessing database:\n```\n%s\n```
 bot.event.added=Hello! 😚
 bot.event.user.new=\
 Greetings, %username%! 😚\n\
@@ -91,7 +92,7 @@ bot.command.hostip=Come to me (via SSH). My IP address:\n```\n%s\n```
 bot.command.game=Game statistics:
 bot.command.charts=📈 Please select a chart 📉
 bot.command.subscribe=\
-Chat `%d` subscriptions to various channels.\n\n\
+Chat "%s" with id `%d` subscriptions to various channels.\n\n\
 1. New posts on the MotoFan.Ru forum\n\
 Status: %s\n\n\
 2. Digests and News from MotoFan.Ru group in Telegram\n\
