--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -41,6 +41,7 @@ bot.error.image.format=\
 Неправильный формат комманды, используйте:\n\
 `/image <chat id> <image url>`.
 bot.error.chatid=Неправильный номер `id` чата.
+bot.error.database=Ошибка доступа к базе данных:\n```\n%s\n```
 bot.event.added=Всем приветик! 😚
 bot.event.user.new=\
 Приветствую вас, %username%! 😚\n\
@@ -91,7 +92,7 @@ bot.command.hostip=Войди в меня (по SSH). Мой IP:\n```\n%s\n```
 bot.command.game=Игровая статистика:
 bot.command.charts=📈 Пожалуйста, выберите график 📉
 bot.command.subscribe=\
-Подписка чата `%d` на различные каналы.\n\n\
+Подписка чата "%s" с id `%d` на различные каналы.\n\n\
 1. Новые сообщения форума MotoFan.Ru\n\
 Статус: %s\n\n\
 2. Дайджесты и новости группы MotoFan.Ru в Telegram:\n\
