Implement subscribe keyboard logic and refactor

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,8 +56,14 @@ Unfortunately, we left %username%…\n\
 User %username% left us…\n\
 Good riddance, %username%! 😈
 bot.event.photo.change=Hey you…! Return everything as it was! 😔
-bot.inline.error.cooldown=❌ Please wait %d sec.
 bot.inline.selected=You have chosen:
+bot.inline.error.cooldown=❌ Please wait %d sec.
+bot.inline.error.database=❌ Cannot change database data.
+bot.inline.error.subscribe.admin=❌ Groups subscribing is only possible for the admins.
+bot.inline.error.subscribe.exist=❌ Chat has already been subscribed.
+bot.inline.error.unsubscribe.exist=❌ Chat has already been unsubscribed.
+bot.inline.subscribe.subscribed=✅ Chat Subscribed.
+bot.inline.subscribe.unsubscribed=✅ Chat Unsubscribed.
 bot.command.start=\
 Hi, I'm Gadget Hackwrench!\n\
 Please send me /help to get a full list of commands.
