--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -56,8 +56,14 @@ bot.event.user.left=\
 Пользователь %username% оставил нас…\n\
 Скатертью дорога, %username%! 😈
 bot.event.photo.change=Эй…! А ну, верни всё как было! 😔
-bot.inline.error.cooldown=❌ Подождите %d сек.
 bot.inline.selected=Вы выбрали:
+bot.inline.error.cooldown=❌ Подождите %d сек.
+bot.inline.error.database=❌ Невозможно изменить данные в базе данных.
+bot.inline.error.subscribe.admin=❌ Подписка групп возможна лишь администраторам.
+bot.inline.error.subscribe.exist=❌ Чат уже подписан.
+bot.inline.error.unsubscribe.exist=❌ Чат уже отписан.
+bot.inline.subscribe.subscribed=✅ Подписка оформлена.
+bot.inline.subscribe.unsubscribed=✅ Подписка отменена.
 bot.command.start=\
 Привет, я Гаечка!\n\
 Для того чтобы получить список команд отправьте /help.
