Implement /debug command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,7 +41,7 @@ bot.error.image.format=\
 Wrong command format, please use:\n\
 `/image <chat id> <image url>`.
 bot.error.chatid=Wrong chat `id` number.
-bot.error.database=Error accessing database:\n```\n%s\n```
+bot.error.database=Database error:\n```\n%s\n```
 bot.event.added=Hello! 😚
 bot.event.user.new=\
 Greetings, %username%! 😚\n\
@@ -110,3 +110,17 @@ bot.command.subscribe.button.subscribe.motofan=1. Subscribe
 bot.command.subscribe.button.unsubscribe.motofan=1. Unsubscribe
 bot.command.subscribe.button.subscribe.digest=2. Subscribe
 bot.command.subscribe.button.unsubscribe.digest=2. Unsubscribe
+bot.command.debug.help=\
+Please choose `/debug` command with argument:\n\
+/debug VRates — Refresh exchange rates.\n\
+/debug VPosts — Get latest MotoFan.Ru posts.\n\
+/debug VShredder — Run database shredder.\n\
+/debug VAvatars — Update user avatars.\n\
+/debug VQueries — Clear inline queries map.\n\
+/debug VStatus — Show variable values.\n\
+/debug BLogUpdates — Show Updates in system log.\n\
+/debug BGreetings — Disable greetings.\n\
+/debug BSilent — Disable sending all events to chat.
+bot.command.debug.variable=Variable `%s` set to `%b`.
+bot.command.debug.data=Data updated!
+bot.command.debug.values="Variable values:"
