--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -41,7 +41,7 @@ bot.error.image.format=\
 Неправильный формат комманды, используйте:\n\
 `/image <chat id> <image url>`.
 bot.error.chatid=Неправильный номер `id` чата.
-bot.error.database=Ошибка доступа к базе данных:\n```\n%s\n```
+bot.error.database=Ошибка базы данных:\n```\n%s\n```
 bot.event.added=Всем приветик! 😚
 bot.event.user.new=\
 Приветствую вас, %username%! 😚\n\
@@ -110,3 +110,17 @@ bot.command.subscribe.button.subscribe.motofan=1. Подписаться
 bot.command.subscribe.button.unsubscribe.motofan=1. Отписаться
 bot.command.subscribe.button.subscribe.digest=2. Подписаться
 bot.command.subscribe.button.unsubscribe.digest=2. Отписаться
+bot.command.debug.help=\
+Выберите команду `/debug` с параметром:\n\
+/debug VRates — Обновить котировки валют.\n\
+/debug VPosts — Последние сообщения с MotoFan.Ru.\n\
+/debug VShredder — Запустить очистку базы данных.\n\
+/debug VAvatars — Обновить аватары пользователей.\n\
+/debug VQueries — Очистить стэк inline-запросов.\n\
+/debug VStatus — Показать значения переменных.\n\
+/debug BLogUpdates — Выводить Updates в лог.\n\
+/debug BGreetings — Отключить приветствия.\n\
+/debug BSilent — Отключить отправку всех событий в чат.
+bot.command.debug.variable=Переменная `%s` установлена в значение `%b`.
+bot.command.debug.data=Данные обновлены!
+bot.command.debug.values=Значения переменных:
