Fix some messages and log strings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -113,14 +113,14 @@ bot.command.subscribe.button.unsubscribe.digest=2. Unsubscribe
 bot.command.debug.help=\
 Please choose `/debug` command with argument:\n\
 /debug VRates — Refresh exchange rates.\n\
-/debug VPosts — Get latest MotoFan.Ru posts.\n\
+/debug VPosts — Get latest MotoFan.Ru forum posts.\n\
 /debug VShredder — Run database shredder.\n\
 /debug VAvatars — Update user avatars.\n\
 /debug VQueries — Clear inline queries map.\n\
 /debug VStatus — Show variable values.\n\
-/debug BLogUpdates — Show Updates in system log.\n\
+/debug BLogUpdates — Show updates in system log.\n\
 /debug BGreetings — Disable greetings.\n\
 /debug BSilent — Disable sending all events to chat.
 bot.command.debug.variable=Variable `%s` set to `%b`.
 bot.command.debug.data=Data updated!
-bot.command.debug.values="Variable values:"
+bot.command.debug.values="Variable settings values:"
