--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -113,14 +113,14 @@ bot.command.subscribe.button.unsubscribe.digest=2. Отписаться
 bot.command.debug.help=\
 Выберите команду `/debug` с параметром:\n\
 /debug VRates — Обновить котировки валют.\n\
-/debug VPosts — Последние сообщения с MotoFan.Ru.\n\
+/debug VPosts — Последние сообщения форума MotoFan.Ru.\n\
 /debug VShredder — Запустить очистку базы данных.\n\
 /debug VAvatars — Обновить аватары пользователей.\n\
-/debug VQueries — Очистить стэк inline-запросов.\n\
+/debug VQueries — Очистить стек inline-запросов.\n\
 /debug VStatus — Показать значения переменных.\n\
-/debug BLogUpdates — Выводить Updates в лог.\n\
+/debug BLogUpdates — Выводить updates в лог.\n\
 /debug BGreetings — Отключить приветствия.\n\
 /debug BSilent — Отключить отправку всех событий в чат.
 bot.command.debug.variable=Переменная `%s` установлена в значение `%b`.
 bot.command.debug.data=Данные обновлены!
-bot.command.debug.values=Значения переменных:
+bot.command.debug.values=Значения переменных настроек:
