Update bot configuration, add answer

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -123,3 +123,9 @@ Please choose `/debug` command with argument:\n\
 bot.command.debug.variable=Variable `%s` set to `%b`.
 bot.command.debug.data=Data updated!
 bot.command.debug.values="Variable settings values:"
+bot.hashtag.digest.ok=\
+I recorded it.\n\
+Recorded.\n\
+I recorded it, %username%.\n\
+Recorded, %username%.\n\
+Saved.
