--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -123,3 +123,9 @@ bot.command.debug.help=\
 bot.command.debug.variable=Переменная `%s` установлена в значение `%b`.
 bot.command.debug.data=Данные обновлены!
 bot.command.debug.values=Значения переменных настроек:
+bot.hashtag.digest.ok=\
+Записала.\n\
+Записано.\n\
+Записала, %username%.\n\
+Записано, %username%.\n\
+Сохранено.
