Check digest message on long length

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -45,7 +45,7 @@ bot.error.database=Database error:\n```\n%s\n```
 bot.event.added=Hello! 😚
 bot.event.user.new=\
 Greetings, %username%! 😚\n\
-Hello! :з\n\
+Hello! :3\n\
 I greet you in this cozy chat room! 😻\n\
 Welcome %username%!\n\
 Ardent greetings from our community! 👏
@@ -129,3 +129,4 @@ Recorded.\n\
 I recorded it, %username%.\n\
 Recorded, %username%.\n\
 Saved.
+bot.hashtag.digest.length.error=Message too long! Cannot add this to the digest :3
