--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -72,7 +72,7 @@ bot.command.hello=\
 Хорошего дня, %username%!\n\
 Привет. Я тут немного сломалась. Выправи меня следующим коммитом.\n\
 Ого. Давно не виделись! Здравствуй.\n\
-Я всё ещё тут. Привет :3\n\
+Я всё ещё тут. Привет :з\n\
 Приветствую, брат. Чем я могу послужить тебе в этот прекрасный день?\n\
 Привет тебе, мой разработчик!
 bot.command.help=\
@@ -129,3 +129,4 @@ bot.hashtag.digest.ok=\
 Записала, %username%.\n\
 Записано, %username%.\n\
 Сохранено.
+bot.hashtag.digest.length.error=Слишком длинное сообщение. Низзя такое добавлять в дайджест! :з
