Add digest html generator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -130,3 +130,7 @@ I recorded it, %username%.\n\
 Recorded, %username%.\n\
 Saved.
 bot.hashtag.digest.length.error=Message too long! Cannot add this to the digest :3
+bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
+bot.hashtag.digest.subscribe.wrote=wrote
+bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
+bot.hashtag.digest.subscribe.link=Link to the message️
