--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -130,3 +130,7 @@ bot.hashtag.digest.ok=\
 Записано, %username%.\n\
 Сохранено.
 bot.hashtag.digest.length.error=Слишком длинное сообщение. Низзя такое добавлять в дайджест! :з
+bot.hashtag.digest.subscribe.title=Новый дайджест в Telegram-группе "%s"!
+bot.hashtag.digest.subscribe.wrote=пишет
+bot.hashtag.digest.subscribe.read=Прочитать сообщение в группе:\n➡
+bot.hashtag.digest.subscribe.link=Ссылка на сообщение
