--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,6 +42,7 @@ Wrong command format, please use:\n\
 `/image <chat id> <image url>`.
 bot.error.chatid=Wrong chat `id` number.
 bot.error.database=Database error:\n```\n%s\n```
+bot.error.show.empty=Error: There are no matching entries in the database.
 bot.event.added=Hello! 😚
 bot.event.user.new=\
 Greetings, %username%! 😚\n\
@@ -134,3 +135,9 @@ bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
 bot.hashtag.digest.subscribe.wrote=wrote
 bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
 bot.hashtag.digest.subscribe.link=Link to the message️
+bot.command.show.header=\
+Latest digests, use `/delete <id>` for deleting entry. \
+Use `/show <page id>` command to get another page. \
+Total pages: `%d`.
+bot.command.show.ellipsis=…
+bot.command.delete.ok=Entry id `%d` has been deleted from the database!
