Add /delete command skeleton

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -43,6 +43,12 @@ Wrong command format, please use:\n\
 bot.error.chatid=Wrong chat `id` number.
 bot.error.database=Database error:\n```\n%s\n```
 bot.error.show.empty=Error: There are no matching entries in the database.
+bot.error.delete.format=\
+Wrong command format, please use:\n\
+`/delete <id>`.
+bot.error.delete.entry=\
+Cannot delete the `%d` entry from the database.\n\
+Perhaps the record has already been deleted. Error:\n```\n%s\n```
 bot.event.added=Hello! 😚
 bot.event.user.new=\
 Greetings, %username%! 😚\n\
