--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -43,6 +43,12 @@ bot.error.image.format=\
 bot.error.chatid=Неправильный номер `id` чата.
 bot.error.database=Ошибка базы данных:\n```\n%s\n```
 bot.error.show.empty=Ошибка: нет подходящих записей в базе данных.
+bot.error.delete.format=\
+Неправильный формат комманды, используйте:\n\
+`/delete <id>`.
+bot.error.delete.entry=\
+Невозможно удалить запись `%d` из базы данных.\n\
+Возможно запись уже была удалена. Ошибка:\n```\n%s\n```
 bot.event.added=Всем приветик! 😚
 bot.event.user.new=\
 Приветствую вас, %username%! 😚\n\
