Implement /delete command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,6 +49,7 @@ Wrong command format, please use:\n\
 bot.error.delete.entry=\
 Cannot delete the `%d` entry from the database.\n\
 Perhaps the record has already been deleted. Error:\n```\n%s\n```
+bot.error.delete.id=Wrong delete `id` argument: `%s`.
 bot.event.added=Hello! 😚
 bot.event.user.new=\
 Greetings, %username%! 😚\n\
