--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -49,6 +49,7 @@ bot.error.delete.format=\
 bot.error.delete.entry=\
 Невозможно удалить запись `%d` из базы данных.\n\
 Возможно запись уже была удалена. Ошибка:\n```\n%s\n```
+bot.error.delete.id=Неправильный аргумент `id` команды удаления: `%s`.
 bot.event.added=Всем приветик! 😚
 bot.event.user.new=\
 Приветствую вас, %username%! 😚\n\
