Improve /send command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,7 +40,7 @@ Wrong command format, please use:\n\
 bot.error.image.format=\
 Wrong command format, please use:\n\
 `/image <chat id> <image url>`.
-bot.error.chatid=Wrong chat `id` number.
+bot.error.chatid=Wrong chat `id` number: `%s`.
 bot.error.database=Database error:\n```\n%s\n```
 bot.error.show.empty=Error: There are no matching entries in the database.
 bot.error.delete.format=\
