--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -40,7 +40,7 @@ bot.error.send.format=\
 bot.error.image.format=\
 Неправильный формат комманды, используйте:\n\
 `/image <chat id> <image url>`.
-bot.error.chatid=Неправильный номер `id` чата.
+bot.error.chatid=Неправильный номер `id` чата: `%s`.
 bot.error.database=Ошибка базы данных:\n```\n%s\n```
 bot.error.show.empty=Ошибка: нет подходящих записей в базе данных.
 bot.error.delete.format=\
