Fix /delete command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -47,8 +47,9 @@ bot.error.delete.format=\
 Wrong command format, please use:\n\
 `/delete <id>`.
 bot.error.delete.entry=\
-Cannot delete the `%d` entry from the database.\n\
-Perhaps the record has already been deleted. Error:\n```\n%s\n```
+Cannot delete the id `%d` entry from the database.\n\
+Perhaps the record has already been deleted.\n\n\
+Error:\n```\n%s\n```
 bot.error.delete.id=Wrong delete `id` argument: `%s`.
 bot.event.added=Hello! 😚
 bot.event.user.new=\
