--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -47,8 +47,9 @@ bot.error.delete.format=\
 Неправильный формат комманды, используйте:\n\
 `/delete <id>`.
 bot.error.delete.entry=\
-Невозможно удалить запись `%d` из базы данных.\n\
-Возможно запись уже была удалена. Ошибка:\n```\n%s\n```
+Невозможно удалить запись id `%d` из базы данных.\n\
+Возможно запись уже была удалена.\n\n\
+Ошибка:\n```\n%s\n```
 bot.error.delete.id=Неправильный аргумент `id` команды удаления: `%s`.
 bot.event.added=Всем приветик! 😚
 bot.event.user.new=\
@@ -147,4 +148,4 @@ bot.command.show.header=\
 Используйте `/show <page id>` для получения другой страницы. \
 Всего страниц: `%d`.
 bot.command.show.ellipsis=…
-bot.command.delete.ok=Запись под номером `%d` удалена из базы данных!
+bot.command.delete.ok=Запись под id `%d` удалена из базы данных!
