Preparation to implement /digest command and keyboard

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -73,6 +73,7 @@ bot.inline.error.subscribe.exist=❌ Chat has already been subscribed.
 bot.inline.error.unsubscribe.exist=❌ Chat has already been unsubscribed.
 bot.inline.subscribe.subscribed=✅ Chat Subscribed.
 bot.inline.subscribe.unsubscribed=✅ Chat Unsubscribed.
+bot.inline.digest.page=You have selected a page:
 bot.command.start=\
 Hi, I'm Gadget Hackwrench!\n\
 Please send me /help to get a full list of commands.
@@ -131,7 +132,7 @@ Please choose `/debug` command with argument:\n\
 /debug BSilent — Disable sending all events to chat.
 bot.command.debug.variable=Variable `%s` set to `%b`.
 bot.command.debug.data=Data updated!
-bot.command.debug.values="Variable settings values:"
+bot.command.debug.values=Variable settings values:
 bot.hashtag.digest.ok=\
 I recorded it.\n\
 Recorded.\n\
@@ -149,3 +150,28 @@ Use `/show <page id>` command to get another page. \
 Total pages: `%d`.
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Entry id `%d` has been deleted from the database!
+bot.command.digest.page=Page
+bot.command.digest.hello=\
+Hi guys! #digest\n\
+Sunny day to you, %username%! #digest\n\
+Hello, my kittens :3 #digest\n\
+Hi, %username%, glad to see you again :3 #digest\n\
+Hello Developers! #digest\n\
+Hi everybody. #digest
+bot.command.digest.header=\
+At your request, I have compiled the following, p.\n\
+Your personal digest, p.\n\
+So, the following happened, p.\n\
+Not a boring day. Here are the latest events, p.\n\
+The following happened, p.\n\
+So many things happened while you were away, p.
+bot.command.digest.empty=\
+Unfortunately, there is nothing. Sorry me, %username%.\n\
+Someone again forgot to fill out #digest! %username%, scold them.\n\
+Well, who forgot to fill out the digest? Is it you, %username%?!\n\
+Ohh! %username% did not fill out the digest. What a shame!\n\
+All night obscene pictures were posted in the chat, but they did not fill out the digest. Ohh!\n\
+Again, everyone forgot about the digest. Nothing here 😓
+bot.command.digest.marker=•
+bot.command.digest.marker.new=🆕
+bot.command.digest.link=➡️
