--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -73,6 +73,7 @@ bot.inline.error.subscribe.exist=❌ Чат уже подписан.
 bot.inline.error.unsubscribe.exist=❌ Чат уже отписан.
 bot.inline.subscribe.subscribed=✅ Подписка оформлена.
 bot.inline.subscribe.unsubscribed=✅ Подписка отменена.
+bot.inline.digest.page=Вы выбрали страницу:
 bot.command.start=\
 Привет, я Гаечка!\n\
 Для того чтобы получить список команд отправьте /help.
@@ -149,3 +150,28 @@ bot.command.show.header=\
 Всего страниц: `%d`.
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Запись под id `%d` удалена из базы данных!
+bot.command.digest.page=Стр.
+bot.command.digest.hello=\
+Привет, ребята! #digest\n\
+Солнечного дня тебе, %username%! #digest\n\
+Привет, котятки :3 #digest\n\
+Привет, %username%, рада тебя снова видеть :3 #digest\n\
+Привет всем программистам! #digest\n\
+Всем привет. #digest
+bot.command.digest.header=\
+По твоему запросу я составила следующее, стр.\n\
+Твой персональный дайджест, стр.\n\
+Итак, случилось следующее, стр.\n\
+Нескучный денёк. Вот последние события, стр.\n\
+Произошло следующее, стр.\n\
+Пока тебя не было, столько всего произошло, стр.
+bot.command.digest.empty=\
+К сожалению, ничего нет. Прости меня, %username%.\n\
+Опять кто-то забыл заполнить #digest! %username%, поругай их.\n\
+Ну и кто забыл заполнить дайджест? %username%?!\n\
+А %username% так и не заполнял дайджест. Сделайте ему ата-та-та.\n\
+Всю ночь непристойные картинки в чат постили, а дайджест не заполнили. Эх вы.\n\
+Опять все забыли про дайджест. Ничего тут нет 😓
+bot.command.digest.marker=•
+bot.command.digest.marker.new=🆕
+bot.command.digest.link=➡️
