Implement digest pager

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -150,7 +150,10 @@ Use `/show <page id>` command to get another page. \
 Total pages: `%d`.
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Entry id `%d` has been deleted from the database!
-bot.command.digest.page=Page
+bot.command.digest.pager.right=>
+bot.command.digest.pager.left=<
+bot.command.digest.pager.right.last=>>
+bot.command.digest.pager.left.first=<<
 bot.command.digest.hello=\
 Hi guys! #digest\n\
 Sunny day to you, %username%! #digest\n\
