--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -150,7 +150,10 @@ bot.command.show.header=\
 Всего страниц: `%d`.
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Запись под id `%d` удалена из базы данных!
-bot.command.digest.page=Стр.
+bot.command.digest.pager.right=>
+bot.command.digest.pager.left=<
+bot.command.digest.pager.right.last=>>
+bot.command.digest.pager.left.first=<<
 bot.command.digest.hello=\
 Привет, ребята! #digest\n\
 Солнечного дня тебе, %username%! #digest\n\
