Add Keyboard Pager Ability class

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -74,6 +74,10 @@ bot.inline.error.unsubscribe.exist=❌ Chat has already been unsubscribed.
 bot.inline.subscribe.subscribed=✅ Chat Subscribed.
 bot.inline.subscribe.unsubscribed=✅ Chat Unsubscribed.
 bot.inline.digest.page=You have selected a page:
+bot.pager.right=>
+bot.pager.left=<
+bot.right.last=>>
+bot.left.first=<<
 bot.command.start=\
 Hi, I'm Gadget Hackwrench!\n\
 Please send me /help to get a full list of commands.
@@ -150,10 +154,6 @@ Use `/show <page id>` command to get another page. \
 Total pages: `%d`.
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Entry id `%d` has been deleted from the database!
-bot.command.digest.pager.right=>
-bot.command.digest.pager.left=<
-bot.command.digest.pager.right.last=>>
-bot.command.digest.pager.left.first=<<
 bot.command.digest.hello=\
 Hi guys! #digest\n\
 Sunny day to you, %username%! #digest\n\
