--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -74,6 +74,10 @@ bot.inline.error.unsubscribe.exist=❌ Чат уже отписан.
 bot.inline.subscribe.subscribed=✅ Подписка оформлена.
 bot.inline.subscribe.unsubscribed=✅ Подписка отменена.
 bot.inline.digest.page=Вы выбрали страницу:
+bot.pager.right=>
+bot.pager.left=<
+bot.pager.right.last=>>
+bot.pager.left.first=<<
 bot.command.start=\
 Привет, я Гаечка!\n\
 Для того чтобы получить список команд отправьте /help.
@@ -150,10 +154,6 @@ bot.command.show.header=\
 Всего страниц: `%d`.
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Запись под id `%d` удалена из базы данных!
-bot.command.digest.pager.right=>
-bot.command.digest.pager.left=<
-bot.command.digest.pager.right.last=>>
-bot.command.digest.pager.left.first=<<
 bot.command.digest.hello=\
 Привет, ребята! #digest\n\
 Солнечного дня тебе, %username%! #digest\n\
