Prepare to implementing show keyboard

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -73,7 +73,7 @@ bot.inline.error.subscribe.exist=❌ Чат уже подписан.
 bot.inline.error.unsubscribe.exist=❌ Чат уже отписан.
 bot.inline.subscribe.subscribed=✅ Подписка оформлена.
 bot.inline.subscribe.unsubscribed=✅ Подписка отменена.
-bot.inline.digest.page=Вы выбрали страницу:
+bot.inline.pager.page=Вы выбрали страницу:
 bot.pager.right=>
 bot.pager.left=<
 bot.pager.right.last=>>
