--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -73,11 +73,11 @@ bot.inline.error.subscribe.exist=❌ Chat has already been subscribed.
 bot.inline.error.unsubscribe.exist=❌ Chat has already been unsubscribed.
 bot.inline.subscribe.subscribed=✅ Chat Subscribed.
 bot.inline.subscribe.unsubscribed=✅ Chat Unsubscribed.
-bot.inline.digest.page=You have selected a page:
+bot.inline.pager.page=You have selected a page:
 bot.pager.right=>
 bot.pager.left=<
-bot.right.last=>>
-bot.left.first=<<
+bot.pager.right.last=>>
+bot.pager.left.first=<<
 bot.command.start=\
 Hi, I'm Gadget Hackwrench!\n\
 Please send me /help to get a full list of commands.
