Add keyboard for show command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -137,21 +137,10 @@ Please choose `/debug` command with argument:\n\
 bot.command.debug.variable=Variable `%s` set to `%b`.
 bot.command.debug.data=Data updated!
 bot.command.debug.values=Variable settings values:
-bot.hashtag.digest.ok=\
-I recorded it.\n\
-Recorded.\n\
-I recorded it, %username%.\n\
-Recorded, %username%.\n\
-Saved.
-bot.hashtag.digest.length.error=Message too long! Cannot add this to the digest :3
-bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
-bot.hashtag.digest.subscribe.wrote=wrote
-bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
-bot.hashtag.digest.subscribe.link=Link to the message️
 bot.command.show.header=\
 Latest digests, use `/delete <id>` for deleting entry. \
 Use `/show <page id>` command to get another page. \
-Total pages: `%d`.
+Pages %d/%d:
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Entry id `%d` has been deleted from the database!
 bot.command.digest.hello=\
@@ -178,3 +167,14 @@ Again, everyone forgot about the digest. Nothing here 😓
 bot.command.digest.marker=•
 bot.command.digest.marker.new=🆕
 bot.command.digest.link=➡️
+bot.hashtag.digest.ok=\
+I recorded it.\n\
+Recorded.\n\
+I recorded it, %username%.\n\
+Recorded, %username%.\n\
+Saved.
+bot.hashtag.digest.length.error=Message too long! Cannot add this to the digest :3
+bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
+bot.hashtag.digest.subscribe.wrote=wrote
+bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
+bot.hashtag.digest.subscribe.link=Link to the message️
