--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -137,21 +137,10 @@ bot.command.debug.help=\
 bot.command.debug.variable=Переменная `%s` установлена в значение `%b`.
 bot.command.debug.data=Данные обновлены!
 bot.command.debug.values=Значения переменных настроек:
-bot.hashtag.digest.ok=\
-Записала.\n\
-Записано.\n\
-Записала, %username%.\n\
-Записано, %username%.\n\
-Сохранено.
-bot.hashtag.digest.length.error=Слишком длинное сообщение. Низзя такое добавлять в дайджест! :з
-bot.hashtag.digest.subscribe.title=Новый дайджест в Telegram-группе "%s"!
-bot.hashtag.digest.subscribe.wrote=пишет
-bot.hashtag.digest.subscribe.read=Прочитать сообщение в группе:\n➡
-bot.hashtag.digest.subscribe.link=Ссылка на сообщение
 bot.command.show.header=\
 Список дайджестов, используйте команду `/delete <id>` для удаления. \
 Используйте `/show <page id>` для получения другой страницы. \
-Всего страниц: `%d`.
+Страницы %d/%d:
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Запись под id `%d` удалена из базы данных!
 bot.command.digest.hello=\
@@ -178,3 +167,14 @@ bot.command.digest.empty=\
 bot.command.digest.marker=•
 bot.command.digest.marker.new=🆕
 bot.command.digest.link=➡️
+bot.hashtag.digest.ok=\
+Записала.\n\
+Записано.\n\
+Записала, %username%.\n\
+Записано, %username%.\n\
+Сохранено.
+bot.hashtag.digest.length.error=Слишком длинное сообщение. Низзя такое добавлять в дайджест! :з
+bot.hashtag.digest.subscribe.title=Новый дайджест в Telegram-группе "%s"!
+bot.hashtag.digest.subscribe.wrote=пишет
+bot.hashtag.digest.subscribe.read=Прочитать сообщение в группе:\n➡
+bot.hashtag.digest.subscribe.link=Ссылка на сообщение
