Fix show keyboard pages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -137,10 +137,7 @@ Please choose `/debug` command with argument:\n\
 bot.command.debug.variable=Variable `%s` set to `%b`.
 bot.command.debug.data=Data updated!
 bot.command.debug.values=Variable settings values:
-bot.command.show.header=\
-Latest digests, use `/delete <id>` for deleting entry. \
-Use `/show <page id>` command to get another page. \
-Pages %d/%d:
+bot.command.show.header=Latest digests, use `/delete <id>` for deleting entry, p. %d/%d:
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Entry id `%d` has been deleted from the database!
 bot.command.digest.hello=\
