--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -137,10 +137,7 @@ bot.command.debug.help=\
 bot.command.debug.variable=Переменная `%s` установлена в значение `%b`.
 bot.command.debug.data=Данные обновлены!
 bot.command.debug.values=Значения переменных настроек:
-bot.command.show.header=\
-Список дайджестов, используйте команду `/delete <id>` для удаления. \
-Используйте `/show <page id>` для получения другой страницы. \
-Страницы %d/%d:
+bot.command.show.header=Список дайджестов, используйте команду `/delete <id>` для удаления, стр. %d/%d:
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Запись под id `%d` удалена из базы данных!
 bot.command.digest.hello=\
