Fix admin rights on keys

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -69,6 +69,7 @@ bot.inline.selected=You have chosen:
 bot.inline.error.cooldown=❌ Please wait %d sec.
 bot.inline.error.database=❌ Cannot change database data.
 bot.inline.error.subscribe.admin=❌ Groups subscribing is only possible for the admins.
+bot.inline.error.show.admin=❌ This action is available only to the administrator.
 bot.inline.error.subscribe.exist=❌ Chat has already been subscribed.
 bot.inline.error.unsubscribe.exist=❌ Chat has already been unsubscribed.
 bot.inline.subscribe.subscribed=✅ Chat Subscribed.
