--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -69,6 +69,7 @@ bot.inline.selected=Вы выбрали:
 bot.inline.error.cooldown=❌ Подождите %d сек.
 bot.inline.error.database=❌ Невозможно изменить данные в базе данных.
 bot.inline.error.subscribe.admin=❌ Подписка групп возможна лишь администраторам.
+bot.inline.error.show.admin=❌ Это действие доступно только администраторам.
 bot.inline.error.subscribe.exist=❌ Чат уже подписан.
 bot.inline.error.unsubscribe.exist=❌ Чат уже отписан.
 bot.inline.subscribe.subscribed=✅ Подписка оформлена.
