Improve digest message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -142,19 +142,23 @@ bot.command.show.header=Latest digests, use `/delete <id>` for deleting entry, p
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Entry id `%d` has been deleted from the database!
 bot.command.digest.hello=\
-Hi guys! #digest\n\
-Sunny day to you, %username%! #digest\n\
-Hello, my kittens :3 #digest\n\
-Hi, %username%, glad to see you again :3 #digest\n\
-Hello Developers! #digest\n\
-Hi everybody. #digest
+Hi guys!\n\
+Sunny day to you, %username%!\n\
+Hello, my kittens :3\n\
+Hi, %username%, glad to see you again :3\n\
+Hello Developers!\n\
+Hi everybody.
 bot.command.digest.header=\
-At your request, I have compiled the following, p.\n\
-Your personal digest, p.\n\
-So, the following happened, p.\n\
-Not a boring day. Here are the latest events, p.\n\
-The following happened, p.\n\
-So many things happened while you were away, p.
+At your request, I have compiled the following.\n\
+Your personal digest.\n\
+So, the following happened.\n\
+Not a boring day. Here are the latest events.\n\
+The following happened.\n\
+So many things happened while you were away!
+bot.command.digest.private=\
+Hi, %username%, glad to see you again :3\n\
+Your personal digest.
+bot.command.digest.stats=Total #digest count is %d, p. %d/%d:
 bot.command.digest.empty=\
 Unfortunately, there is nothing. Sorry me, %username%.\n\
 Someone again forgot to fill out #digest! %username%, scold them.\n\
