Improve show output

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -138,7 +138,7 @@ Please choose `/debug` command with argument:\n\
 bot.command.debug.variable=Variable `%s` set to `%b`.
 bot.command.debug.data=Data updated!
 bot.command.debug.values=Variable settings values:
-bot.command.show.header=Latest digests, use `/delete <id>` for deleting entry, p. %d/%d:
+bot.command.show.header=All digests, use `/delete <id>` for deleting entry.
 bot.command.show.ellipsis=…
 bot.command.delete.ok=Entry id `%d` has been deleted from the database!
 bot.command.digest.hello=\
@@ -158,7 +158,6 @@ So many things happened while you were away!
 bot.command.digest.private=\
 Hi, %username%, glad to see you again :3\n\
 Your personal digest.
-bot.command.digest.stats=Total #digest count is %d, p. %d/%d:
 bot.command.digest.empty=\
 Unfortunately, there is nothing. Sorry me, %username%.\n\
 Someone again forgot to fill out #digest! %username%, scold them.\n\
@@ -180,3 +179,4 @@ bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
 bot.hashtag.digest.subscribe.wrote=wrote
 bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
 bot.hashtag.digest.subscribe.link=Link to the message️
+bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
