Add error on empty digest tag

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -174,7 +174,8 @@ bot.hashtag.digest.ok=\
 Записала, %username%.\n\
 Записано, %username%.\n\
 Сохранено.
-bot.hashtag.digest.length.error=Слишком длинное сообщение. Низзя такое добавлять в дайджест! :з
+bot.hashtag.digest.error.length=Слишком длинное сообщение. Низзя такое добавлять в дайджест! :з
+bot.hashtag.digest.error.empty=Не могу добавить пустое сообщение в дайджест.
 bot.hashtag.digest.subscribe.title=Новый дайджест в Telegram-группе "%s"!
 bot.hashtag.digest.subscribe.wrote=пишет
 bot.hashtag.digest.subscribe.read=Прочитать сообщение в группе:\n➡
