--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -174,7 +174,8 @@ Recorded.\n\
 I recorded it, %username%.\n\
 Recorded, %username%.\n\
 Saved.
-bot.hashtag.digest.length.error=Message too long! Cannot add this to the digest :3
+bot.hashtag.digest.error.length=Message too long! Cannot add this to the digest :3
+bot.hashtag.digest.error.empty=Cannot add a blank message to the digest.
 bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
 bot.hashtag.digest.subscribe.wrote=wrote
 bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
