Refactor: add sendSimple method and rename Markdown/HTML methods

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -102,7 +102,7 @@ Gadget Hackwrench commands help:\n\
 /help — Show this help.
 bot.command.help.admin=\
 /hello or /hi  — Get greeting from bot.\n\
-/show <page id> — Show digests list.\n\
+/show — Show digests list.\n\
 /delete <id> — Remove digest entry by <id> number.\n\
 /send <chat id> <message> — Send <message> into <chat id>.\n\
 /sticker <chat id> <sticker id> — Send sticker into <chat id>.\n\
@@ -136,7 +136,7 @@ Please choose `/debug` command with argument:\n\
 /debug BGreetings — Disable greetings.\n\
 /debug BSilent — Disable sending all events to chat.
 bot.command.debug.variable=Variable `%s` set to `%b`.
-bot.command.debug.data=Data updated!
+bot.command.debug.data=_Data updated!_
 bot.command.debug.values=Variable settings values:
 bot.command.show.header=All digests, use `/delete <id>` for deleting entry.
 bot.command.show.ellipsis=…
