--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -102,7 +102,7 @@ bot.command.help=\
 /help — Эта справка.
 bot.command.help.admin=\
 /hello или /hi  — Получить привет от бота.\n\
-/show <page id> — Показать список записей дайджеста.\n\
+/show — Показать список записей дайджеста.\n\
 /delete <id> — Удалить запись дайджеста под номером <id>.\n\
 /send <chat id> <message> — Отправить <message> в <chat id>.\n\
 /sticker <chat id> <sticker id> — Отправить стикер в <chat id>.\n\
@@ -136,7 +136,7 @@ bot.command.debug.help=\
 /debug BGreetings — Отключить приветствия.\n\
 /debug BSilent — Отключить отправку всех событий в чат.
 bot.command.debug.variable=Переменная `%s` установлена в значение `%b`.
-bot.command.debug.data=Данные обновлены!
+bot.command.debug.data=_Данные обновлены!_
 bot.command.debug.values=Значения переменных настроек:
 bot.command.show.header=Все дайджесты, используйте команду `/delete <id>` для удаления.
 bot.command.show.ellipsis=…
