Rename commands: /rates => /rate, /charts => /chart

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -93,12 +93,12 @@ Hello to you, my developer!
 bot.command.help=\
 Gadget Hackwrench commands help:\n\
 /digest — Show latest messages with `#digest` tag.\n\
-/rates — Show exchange rates.\n\
-/charts — Show charts of exchange rates.\n\
+/rate — Show exchange rates.\n\
+/chart — Show charts of exchange rates.\n\
 /start — Show start greeting.\n\
 /coffee — Send sticker with coffee.\n\
-/game — Show game server statistic.\n\
-/subscribe — Subscribe to various MotoFan.Ru channels.\n\
+/game — Show game servers statistic.\n\
+/subscribe — Subscribe to various channels.\n\
 /help — Show this help.
 bot.command.help.admin=\
 /hello or /hi  — Get greeting from bot.\n\
