--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -93,12 +93,12 @@ bot.command.hello=\
 bot.command.help=\
 Помощь по командам няшки-бота:\n\
 /digest — Показать последние сообщения с тегом `#digest`.\n\
-/rates — Показать различные котировки.\n\
-/charts — Показать различные графики котировок.\n\
+/rate — Показать различные котировки.\n\
+/chart — Показать различные графики котировок.\n\
 /start — Приветствие.\n\
 /coffee — Стикер с кофе.\n\
 /game — Статистика игровых серверов.\n\
-/subscribe — Подписаться на различные каналы MotoFan.Ru.\n\
+/subscribe — Подписаться на различные каналы.\n\
 /help — Эта справка.
 bot.command.help.admin=\
 /hello или /hi  — Получить привет от бота.\n\
