Test localization mechanism

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -181,3 +181,5 @@ bot.hashtag.digest.subscribe.wrote=wrote
 bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
 bot.hashtag.digest.subscribe.link=Link to the message️
 bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
+
+site.title=Title on English!
