--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -181,3 +181,5 @@ bot.hashtag.digest.subscribe.wrote=пишет
 bot.hashtag.digest.subscribe.read=Прочитать сообщение в группе:\n➡
 bot.hashtag.digest.subscribe.link=Ссылка на сообщение
 bot.info.digest.stats=Всего #digest'ов: %d, стр. %d/%d:
+
+site.title=Заголовок на русском!
