Add footer HTML template

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -182,4 +182,9 @@ bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
 bot.hashtag.digest.subscribe.link=Link to the message️
 bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
 
-site.title=Title on English!
+site.title=MotoFan.Ru news in Telegram group!
+site.footer.created=\
+Created with <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot in Telegram.">@Digest_bot</a> help.
+site.footer.copyright=\
+© <a href="//exlmoto.ru" target="_blank" title="EXL's Developer Blog.">EXL</a>, 2015-%date%. \
+Telegram: <a href="//t.me/exlmoto" target="_blank" title="@exlmoto in Telegram.">@exlmoto</a>.
