Add header template

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -188,3 +188,13 @@ Created with <a href="//t.me/Digest_bot" target="_blank" title="@Digest_bot in T
 site.footer.copyright=\
 © <a href="//exlmoto.ru" target="_blank" title="EXL's Developer Blog.">EXL</a>, 2015-%date%. \
 Telegram: <a href="//t.me/exlmoto" target="_blank" title="@exlmoto in Telegram.">@exlmoto</a>.
+site.header.logo.tooltip=MotoFan.Ru group news, last page.
+site.header.menu.site=Site
+site.header.menu.wiki=MotoWiki
+site.header.menu.search=Search
+site.header.menu.members=Members
+site.header.menu.rules=Forum Rules
+site.header.menu.rating=Rating
+site.header.menu.store=Store
+site.header.menu.twitter=Twitter
+site.header.menu.telegram=Telegram
