--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -188,3 +188,13 @@ site.footer.created=\
 site.footer.copyright=\
 © <a href="//exlmoto.ru" target="_blank" title="EXL's Developer Blog.">EXL</a>, 2015-%date%. \
 Telegram: <a href="//t.me/exlmoto" target="_blank" title="@exlmoto в Telegram.">@exlmoto</a>.
+site.header.logo.tooltip=Новости чата MotoFan.Ru, последняя страница.
+site.header.menu.site=Сайт
+site.header.menu.wiki=MotoWiki
+site.header.menu.search=Поиск
+site.header.menu.members=Пользователи
+site.header.menu.rules=Правила форума
+site.header.menu.rating=Рейтинг
+site.header.menu.store=Магазин
+site.header.menu.twitter=Twitter
+site.header.menu.telegram=Telegram-чат
