Refactor: renaming telegram

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -197,4 +197,4 @@ site.header.menu.rules=Правила форума
 site.header.menu.rating=Рейтинг
 site.header.menu.store=Магазин
 site.header.menu.twitter=Twitter
-site.header.menu.telegram=Telegram-чат
+site.header.menu.telegram=Telegram
